--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,6 +25,12 @@
             {% include icon-twitter.html username=site.twitter_username %}
           </li>
           {% endif %}
+
+          {% if site.google_plus_username %}
+          <li>
+            {% include icon-google-plus.html username=site.google_plus_username %}
+          </li>
+          {% endif %}
         </ul>
       </div>
 
